--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toggle": "^1.0.3",
+    "@types/react-slick": "^0.23.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.290.0",
     "next": "14.0.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-slick": "^0.29.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
