--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "next": "14.0.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-type-animation": "^3.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
