--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.2",
     "react-hot-toast": "^2.4.1",
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^1.14.0",
